<resources>
    <string name="app_name">Lion Run</string>
    <string name="action_settings">Settings</string>

    <string name="up">↑</string>
    <string name="left">←</string>
    <string name="right">→</string>
    <string name="down">↓</string>
    <string name="start">START</string>
    <string name="play_regular_arrow_game">Play Regular Arrow Game</string>
    <string name="play_unique_sensor_game">Play unique Sensor Game</string>
    <string name="top_10_record">Top 10 Record</string>
    <string name="exit">exit</string>
    <string name="lion_run">Lion Run</string>
    <string name="back">Back</string>
    <string name="map">Map</string>
    <string name="top_10">Top 10</string>
    <string name="enter_name">Enter Name:</string>
    <string name="submit">Submit</string>
</resources>