<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Activity_Menu"
    android:keepScreenOn="true"
    >

    <ImageView
        android:id="@+id/game_IMG_background_Menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        >

    </ImageView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/game_BTN_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentRight="true"
        android:text="@string/exit"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">


        <TextView
            android:id="@+id/game_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/lion_run"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="60sp">

        </TextView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_BTN_arrow_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="16dp"
            android:text="@string/play_regular_arrow_game"
             />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_BTN_sensor_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/play_unique_sensor_game"
             />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_BTN_record_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/top_10_record"
             />
    </LinearLayout>


</RelativeLayout>