<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Activity_Log"
    android:keepScreenOn="true"
    >

    <ImageView
        android:id="@+id/game_IMG_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        >

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">


        <TextView
            android:id="@+id/game_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/lion_run"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="60sp">

        </TextView>


<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/game_log"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="20dp"-->
<!--            android:hint="@string/enter_name"-->
<!--            android:textColor="@color/white"-->
<!--            android:textColorHint="@color/white"-->
<!--            >-->
<!--        </com.google.android.material.textfield.TextInputEditText>-->

        <EditText
            android:id="@+id/game_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/enter_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white">

        </EditText>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_BTN_log_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            />


    </LinearLayout>


</RelativeLayout>